update index file

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             <div class="items photo">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
                                     <a href="ambakero-details.html">
-                                        <img src="img/portfolio/project/1.jpg" alt="image">
+                                        <img src="img/portfolio/project/ambakero.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
                                                 <h5>Ambakero <br> Product photoshoot</h5>
