--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project-details.html">
+                                    <a href="project/davao-light-details.html">
                                         <img src="img/portfolio/project/2.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
