--- a/project/davao-light-details.html
+++ b/project/davao-light-details.html
@@ -15,7 +15,7 @@
     <title>nathanmuyx</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../img/favicon.ico" />
+    <link rel="shortcut icon" href="../img/home/favicon.ico" />
 
     <!-- Google Fonts -->
     <link
@@ -59,7 +59,7 @@
     <div id="navi" class="topnav">
         <div class="container-fluid">
             <div class="logo">
-                <a href="../index.html"><img src="../img/logo-light.png" alt=""></a>
+                <a href="../index.html"><img src="../img/home/logo-light.png" alt=""></a>
             </div>
             <div class="menu-icon">
                 <span class="icon">
@@ -155,12 +155,12 @@
         <!-- ==================== Start Header ==================== -->
 
         <section class="page-header proj-det bg-img parallaxie valign text-center" data-overlay-dark="3"
-            data-background="img/portfolio/project/bg.jpg">
+            data-background="../img/portfolio/ind-project/davao-light/bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="cont">
-                            <h1>Minimalist Interior</h1>
+                            <h1>6th Davao Light video contest</h1>
                         </div>
                     </div>
                 </div>
@@ -195,26 +195,26 @@
 
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
-                            <h6>Client</h6>
-                            <p><a href="#0">Envato.com</a></p>
+                            <h6>Event</h6>
+                            <p><a href="#0">Film Contest</a></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Date</h6>
-                            <p>6 August 2019</p>
+                            <p>November 22, 2019 </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Categories</h6>
-                            <p><a href="#0">Web Design </a>, <a href="#0">WordPress</a></p>
+                            <p><a href="#0">Video</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Tags</h6>
-                            <p><a href="#0">Minimal</a> , <a href="#0">Modern</a> , <a href="#0">Design</a></p>
+                            <p><a href="#0">Film</a> , <a href="#0">Photography</a> , <a href="#0">Entertainment</a></p>
                         </div>
                     </div>
                 </div>
@@ -232,17 +232,17 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/project/1.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/davao-light/1.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/project/2.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/davao-light/3.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/project/3.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/davao-light/2.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                 </div>
