--- a/project/davao-light-details.html
+++ b/project/davao-light-details.html
@@ -232,12 +232,17 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/davao-light/1.jpg" alt="" class="thumparallax">
+                            <a href="https://www.davaolight.com/index.php/blog/2019/674-st-john-paul-ii-college-of-davao-brings-home-the-grand-prize-in-davao-light-s-6th-video-making-contest#:~:text=St.-,John%20Paul%20II%20College%20of%20Davao%20brings%20home%20the%20Grand,Video%2DMaking%20Contest%20Year%206."
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/davao-light/1.jpg" alt="" class="thumparallax">
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/davao-light/3.jpg" alt="" class="thumparallax">
+                            <a href="https://www.youtube.com/watch?v=cNy94wn3kp0" target="blank">
+                                <img src="../img/portfolio/ind-project/davao-light/3.jpg" alt="" class="thumparallax">
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6">
