--- a/index.html
+++ b/index.html
@@ -268,13 +268,14 @@
                             <!-- gallery item -->
                             <div class="items photo">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="ambakero-details.html">
-                                        <picture>
+                                    <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
+                                        <!-- <picture>
                                             <source type="image/webp" srcset="img/portfolio/project/webp/loading.webp">
                                             <source type="image/jpg" srcset="img/portfolio/project/ambakero.jpg">
                                             <img src="img/portfolio/project/ambakero.jpg"
                                                 alt="Galerio Environmental Consultancy">
-                                        </picture>
+                                        </picture> -->
+                                        <img src="img/portfolio/project/ambakero.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
                                                 <h5>Ambakero <br> Product photoshoot</h5>
@@ -287,7 +288,7 @@
                             <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project-details.html">
+                                    <a href="https://www.instagram.com/p/B-jtMW_ANyQ/" target="blank">
                                         <img src="img/portfolio/project/6.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
@@ -317,7 +318,7 @@
                             <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project-details.html">
+                                    <a href="project/takna-details.html">
                                         <img src="img/portfolio/project/5.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
