--- a/project/davao-light-details.html
+++ b/project/davao-light-details.html
@@ -263,9 +263,8 @@
         <section class="next-project">
             <div class="container">
                 <div class="content text-center">
-                    <a href="project-details.html">
+                    <a href="yabi-details.html">
                         <h2 class="wow" data-splitting>Next</h2>
-                        <p>Opéra national du Rhin.</p>
                     </a>
                 </div>
             </div>
