--- a/project/yabi-details.html
+++ b/project/yabi-details.html
@@ -155,12 +155,12 @@
         <!-- ==================== Start Header ==================== -->
 
         <section class="page-header proj-det bg-img parallaxie valign text-center" data-overlay-dark="3"
-            data-background="../img/portfolio/ind-project/takna/bg.jpg">
+            data-background="../img/portfolio/ind-project/yabi/bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="cont">
-                            <h1>PSITS XI Interschool Film Festival 2019</h1>
+                            <h1>STI Directors Cut 2019</h1>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Date</h6>
-                            <p>January 20, 2020 </p>
+                            <p>February 2019 </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -232,22 +232,20 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="img mb-30">
-                            <a href="https://www.facebook.com/WeArePsitsXI/photos/pcb.2229496913818521/2229494867152059"
+                            <a href="https://drive.google.com/file/d/1Lyypbt5CdytTOjHcGQ4fsOScQqLY9RyA/view?usp=sharing"
                                 target="blank">
-                                <img src="../img/portfolio/ind-project/takna/1.jpg" alt="" class="thumparallax">
+                                <img src="../img/portfolio/ind-project/yabi/1.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <a href="https://www.youtube.com/watch?v=Yv1wMjKBSNo&t=4s" target="blank">
-                                <img src="../img/portfolio/ind-project/takna/3.jpg" alt="" class="thumparallax">
-                            </a>
+                            <img src="../img/portfolio/ind-project/yabi/3.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/takna/2.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/yabi/2.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                 </div>
