--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project-details.html">
+                                    <a href="https://www.instagram.com/p/B4rglTIAb_O/" target="blank">
                                         <img src="img/portfolio/project/4.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
@@ -376,11 +376,11 @@
                             <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project-details.html">
+                                    <a href="project/yabi-details.html">i
                                         <img src="img/portfolio/project/10.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
-                                                <h5>STI DIRECTORS CUT 2018</h5>
+                                                <h5>STI DIRECTORS CUT 201</h5>
                                             </div>
                                         </div>
                                     </a>
@@ -406,14 +406,14 @@
                             <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project-details.html">
-                                        <img src="img/portfolio/project/3.jpg" alt="image">
-                                        <div class="item-img-overlay valign">
-                                            <div class="overlay-info full-width">
-                                                <h5>SHS Thesis <br> Mobile Application Trivia Game</h5>
-                                            </div>
+                                    <!-- <a href="project-details.html"> -->
+                                    <img src="img/portfolio/project/3.jpg" alt="image">
+                                    <div class="item-img-overlay valign">
+                                        <div class="overlay-info full-width">
+                                            <h5>SHS Thesis <br> Mobile Application Trivia Game</h5>
                                         </div>
-                                    </a>
+                                    </div>
+                                    <!-- </a> -->
                                 </div>
                             </div>
 
