--- a/project/jas-details.html
+++ b/project/jas-details.html
@@ -155,12 +155,12 @@
         <!-- ==================== Start Header ==================== -->
 
         <section class="page-header proj-det bg-img parallaxie valign text-center" data-overlay-dark="3"
-            data-background="../img/portfolio/ind-project/takna/bg.jpg">
+            data-background="../img/portfolio/ind-project/davao-light/bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="cont">
-                            <h1>PSITS XI Interschool Film Festival 2019</h1>
+                            <h1>6th Davao Light video contest</h1>
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
         <section class="intro-section section-padding">
             <div class="container">
                 <div class="row">
-                    <!-- <div class="col-lg-3 col-md-4">
+                    <div class="col-lg-3 col-md-4">
                         <div class="htit">
                             <h4>introduction</h4>
                         </div>
@@ -191,7 +191,7 @@
                                 consider to be an integral part.
                             </p>
                         </div>
-                    </div> -->
+                    </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
@@ -202,7 +202,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Date</h6>
-                            <p>January 20, 2020 </p>
+                            <p>November 22, 2019 </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -232,22 +232,22 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="img mb-30">
-                            <a href="https://www.facebook.com/WeArePsitsXI/photos/pcb.2229496913818521/2229494867152059"
+                            <a href="https://www.davaolight.com/index.php/blog/2019/674-st-john-paul-ii-college-of-davao-brings-home-the-grand-prize-in-davao-light-s-6th-video-making-contest#:~:text=St.-,John%20Paul%20II%20College%20of%20Davao%20brings%20home%20the%20Grand,Video%2DMaking%20Contest%20Year%206."
                                 target="blank">
-                                <img src="../img/portfolio/ind-project/takna/1.jpg" alt="" class="thumparallax">
+                                <img src="../img/portfolio/ind-project/davao-light/1.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <a href="https://www.youtube.com/watch?v=Yv1wMjKBSNo&t=4s" target="blank">
-                                <img src="../img/portfolio/ind-project/takna/3.jpg" alt="" class="thumparallax">
+                            <a href="https://www.youtube.com/watch?v=cNy94wn3kp0" target="blank">
+                                <img src="../img/portfolio/ind-project/davao-light/3.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/takna/2.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/davao-light/2.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
         <section class="next-project">
             <div class="container">
                 <div class="content text-center">
-                    <a href="davao-light-details.html">
+                    <a href="yabi-details.html">
                         <h2 class="wow" data-splitting>Next</h2>
                     </a>
                 </div>
