--- a/project/jas-details.html
+++ b/project/jas-details.html
@@ -155,12 +155,12 @@
         <!-- ==================== Start Header ==================== -->
 
         <section class="page-header proj-det bg-img parallaxie valign text-center" data-overlay-dark="3"
-            data-background="../img/portfolio/ind-project/davao-light/bg.jpg">
+            data-background="../img/portfolio/ind-project/jas/bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="cont">
-                            <h1>6th Davao Light video contest</h1>
+                            <h1>On Event Shoot and Edit | Youth Camp</h1>
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
         <section class="intro-section section-padding">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-4">
+                    <!-- <div class="col-lg-3 col-md-4">
                         <div class="htit">
                             <h4>introduction</h4>
                         </div>
@@ -191,18 +191,18 @@
                                 consider to be an integral part.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Event</h6>
-                            <p><a href="#0">Film Contest</a></p>
+                            <p><a href="#0">Youth Camp</a></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Date</h6>
-                            <p>November 22, 2019 </p>
+                            <p>May 1 - 3, 2019 </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -232,22 +232,20 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="img mb-30">
-                            <a href="https://www.davaolight.com/index.php/blog/2019/674-st-john-paul-ii-college-of-davao-brings-home-the-grand-prize-in-davao-light-s-6th-video-making-contest#:~:text=St.-,John%20Paul%20II%20College%20of%20Davao%20brings%20home%20the%20Grand,Video%2DMaking%20Contest%20Year%206."
-                                target="blank">
-                                <img src="../img/portfolio/ind-project/davao-light/1.jpg" alt="" class="thumparallax">
+                            <a href="https://www.facebook.com/359639661326420/videos/2062136897418146" target="blank">
+                                <img src="../img/portfolio/ind-project/jas/1.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <a href="https://www.youtube.com/watch?v=cNy94wn3kp0" target="blank">
-                                <img src="../img/portfolio/ind-project/davao-light/3.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/jas/3.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/davao-light/2.jpg" alt="" class="thumparallax">
+                            <img src="../img/portfolio/ind-project/jas/2.jpg" alt="" class="thumparallax">
                         </div>
                     </div>
                 </div>
