add projec-paid-details.html/edit nav bar

--- a/index.html
+++ b/index.html
@@ -190,32 +190,27 @@
                             </div>
 
                             <div class="col-lg-8 offset-lg-2 quote-text">
-                                <div class="slider-nav wow fadeInUp" data-wow-delay=".3s">
-                                    <div class="item">
-                                        <div class="cont">
-                                            <p>" Nulla metus ullamcorper vel tincidunt sed euismod nibh Quisque volutpat
-                                                condimentum velit class aptent taciti sociosqu ad litora torquent per
-                                                conubia
-                                                nostra. "
-                                            </p>
+                                <div class="col-lg-10 offset-lg-1">
+                                    <div class="row">
+                                        <div class="col-lg-3 items valign">
+                                            <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                <span class="fab fa-facebook-f"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="item">
-                                        <div class="cont">
-                                            <p>" Nulla metus ullamcorper vel tincidunt sed euismod nibh Quisque volutpat
-                                                condimentum velit class aptent taciti sociosqu ad litora torquent per
-                                                conubia
-                                                nostra. "
-                                            </p>
+                                        <div class="col-lg-3 items active valign">
+                                            <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                <span class="fab fa-instagram"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="item">
-                                        <div class="cont">
-                                            <p>" Nulla metus ullamcorper vel tincidunt sed euismod nibh Quisque volutpat
-                                                condimentum velit class aptent taciti sociosqu ad litora torquent per
-                                                conubia
-                                                nostra. "
-                                            </p>
+                                        <div class="col-lg-3 items valign">
+                                            <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                <span class="fab fa-twitter"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 items valign">
+                                            <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                <span class="fab fa-youtube"></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -299,6 +294,21 @@
                                     </a>
                                 </div>
                             </div>
+
+                            <!-- gallery item -->
+                            <div class="items video">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                    <a href="project/project-paid-details.html">
+                                        <img src="img/portfolio/project/projects.jpg" alt="image">
+                                        <div class="item-img-overlay valign">
+                                            <div class="overlay-info full-width">
+                                                <h5>Project &<br>Paid Videos</h5>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+
 
                             <!-- gallery item -->
                             <div class="items graphic">
@@ -445,24 +455,22 @@
                                     <div class="item wow fadeIn" data-wow-delay=".3s">
                                         <span class="icon et-laptop"></span>
                                         <h5>UI / UX Design</h5>
-                                        <p>Implementation and rollout of new network infrastructure,
-                                            including consolidation.</p>
+                                        <p>I make minimalist and cohesive user interfaces using Adobe XD.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 items active valign">
                                     <div class="item wow fadeIn" data-wow-delay=".3s">
                                         <span class="icon et-camera"></span>
                                         <h5>Film Making / Editing</h5>
-                                        <p>Implementation and rollout of new network infrastructure,
-                                            including consolidation.</p>
+                                        <p>The product of the intellect are converted into film and processed using
+                                            Final Cut Pro X.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 items valign">
                                     <div class="item wow fadeIn" data-wow-delay=".3s">
                                         <span class="icon et-presentation"></span>
                                         <h5>Motion Graphics</h5>
-                                        <p>Implementation and rollout of new network infrastructure,
-                                            including consolidation.</p>
+                                        <p>nteractive contents undergo Adobe Photoshop/Microsoft Powerpoint.</p>
                                     </div>
                                 </div>
                             </div>
