--- a/project/jas-details.html
+++ b/project/jas-details.html
@@ -61,90 +61,53 @@
             <div class="logo">
                 <a href="../index.html"><img src="../img/home/logo-light.png" alt=""></a>
             </div>
-            <div class="menu-icon">
-                <span class="icon">
-                    <i></i>
-                    <i></i>
-                </span>
-                <span class="text" data-splitting>Menu</span>
-            </div>
+            <!-- <div class="menu-icon">
+            <span class="icon">
+                <i></i>
+                <i></i>
+            </span>
+            <span class="text" data-splitting>Menu</span>
+        </div> -->
         </div>
     </div>
 
-    <div class="hamenu">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9 col-md-8">
-                    <div class="menu-links">
-                        <ul class="main-menu">
-                            <li>
-                                <div class="o-hidden">
-                                    <span class="link dmenu"><span class="nm">01.</span>Home <i
-                                            class="fas fa-angle-right"></i></span>
-                                </div>
-                                <div class="sub-menu">
-                                    <ul>
-                                        <li>
-                                            <div class="o-hidden">
-                                                <span class="sub-link back">Go Back <i
-                                                        class="fas fa-long-arrow-alt-right"></i></span>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="o-hidden">
-                                                <a href="index2.html" class="sub-link"><span class="nm">01.</span>Home
-                                                    One</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="o-hidden">
-                                                <a href="index1.html" class="sub-link"><span class="nm">02.</span>Home
-                                                    Two</a>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="about.html" class="link"><span class="nm">02.</span>About Us</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="blog.html" class="link"><span class="nm">03.</span>Stories</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="contact.html" class="link"><span class="nm">04.</span>Contact</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+    <!-- <div class="hamenu">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-9 col-md-8">
+                <div class="menu-links">
+                    <ul class="main-menu">
+                        <li>
+                            <div class="o-hidden">
+                                <a href="index.html" class="link"><span class="nm"></span>Home</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-lg-3 col-md-4">
-                    <div class="cont-info">
-                        <div class="item">
-                            <h6>Phone :</h6>
-                            <p>+0 762-2367-723</p>
-                        </div>
-                        <div class="item">
-                            <h6>Address :</h6>
-                            <p>541 Melville Ave, Palo Alto, CA 94301,
-                                ask@ohio.colabr.io</p>
-                        </div>
-                        <div class="item">
-                            <h6>Email :</h6>
-                            <p>Wevo_website@gmail.com</p>
-                        </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="cont-info">
+                    <div class="item">
+                        <h6>Phone :</h6>
+                        <p>+0 762-2367-723</p>
+                    </div>
+                    <div class="item">
+                        <h6>Address :</h6>
+                        <p>541 Melville Ave, Palo Alto, CA 94301,
+                            ask@ohio.colabr.io</p>
+                    </div>
+                    <div class="item">
+                        <h6>Email :</h6>
+                        <p>Wevo_website@gmail.com</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div> -->
 
     <!-- ==================== End Navgition ==================== -->
+
 
 
     <!-- ==================== Start wrapper ==================== -->
