--- a/project/davao-light-details.html
+++ b/project/davao-light-details.html
@@ -61,17 +61,17 @@
             <div class="logo">
                 <a href="../index.html"><img src="../img/home/logo-light.png" alt=""></a>
             </div>
-            <div class="menu-icon">
+            <!-- <div class="menu-icon">
                 <span class="icon">
                     <i></i>
                     <i></i>
                 </span>
                 <span class="text" data-splitting>Menu</span>
-            </div>
+            </div> -->
         </div>
     </div>
 
-    <div class="hamenu">
+    <!-- <div class="hamenu">
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 col-md-8">
@@ -79,45 +79,7 @@
                         <ul class="main-menu">
                             <li>
                                 <div class="o-hidden">
-                                    <span class="link dmenu"><span class="nm">01.</span>Home <i
-                                            class="fas fa-angle-right"></i></span>
-                                </div>
-                                <div class="sub-menu">
-                                    <ul>
-                                        <li>
-                                            <div class="o-hidden">
-                                                <span class="sub-link back">Go Back <i
-                                                        class="fas fa-long-arrow-alt-right"></i></span>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="o-hidden">
-                                                <a href="index2.html" class="sub-link"><span class="nm">01.</span>Home
-                                                    One</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="o-hidden">
-                                                <a href="index1.html" class="sub-link"><span class="nm">02.</span>Home
-                                                    Two</a>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="about.html" class="link"><span class="nm">02.</span>About Us</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="blog.html" class="link"><span class="nm">03.</span>Stories</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="contact.html" class="link"><span class="nm">04.</span>Contact</a>
+                                    <a href="index.html" class="link"><span class="nm"></span>Home</a>
                                 </div>
                             </li>
                         </ul>
@@ -142,10 +104,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- ==================== End Navgition ==================== -->
-
 
     <!-- ==================== Start wrapper ==================== -->
 
