--- a/project/project-paid-details.html
+++ b/project/project-paid-details.html
@@ -118,12 +118,12 @@
         <!-- ==================== Start Header ==================== -->
 
         <section class="page-header proj-det bg-img parallaxie valign text-center" data-overlay-dark="3"
-            data-background="../img/portfolio/ind-project/takna/bg.jpg">
+            data-background="../img/portfolio/ind-project/project-paid/bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="cont">
-                            <h1>PSITS XI Interschool Film Festival 2019</h1>
+                            <h1>Project & Paid Videos</h1>
                         </div>
                     </div>
                 </div>
@@ -139,12 +139,12 @@
         <section class="intro-section section-padding">
             <div class="container">
                 <div class="row">
-                    <!-- <div class="col-lg-3 col-md-4">
+                    <div class="col-lg-3 col-md-4">
                         <div class="htit">
-                            <h4>introduction</h4>
+                            <h4>Paid Videos</h4>
                         </div>
                     </div>
-                    <div class="col-lg-8 offset-lg-1 col-md-8 mb-30">
+                    <!-- <div class="col-lg-8 offset-lg-1 col-md-8 mb-30">
                         <div class="text">
                             <p>We are a Creative Agency & Startup Studio that provides Digital Products and Services
                                 turns to focus on client success. We specialize in user interface design, including
@@ -156,16 +156,16 @@
                         </div>
                     </div> -->
 
-                    <div class="col-lg-3 col-md-6">
+                    <!-- <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Event</h6>
-                            <p><a href="#0">Film Contest</a></p>
+                            <p><a href="#0">Youth Camp</a></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
                             <h6>Date</h6>
-                            <p>January 20, 2020 </p>
+                            <p>May 1 - 3, 2019 </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -179,7 +179,7 @@
                             <h6>Tags</h6>
                             <p><a href="#0">Film</a> , <a href="#0">Photography</a> , <a href="#0">Entertainment</a></p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -193,32 +193,159 @@
         <section class="projdtal">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-md-6">
                         <div class="img mb-30">
-                            <a href="https://www.facebook.com/WeArePsitsXI/photos/pcb.2229496913818521/2229494867152059"
+                            <a href="https://drive.google.com/file/d/1X3g1d7m7emqiu-vuiK3wUpH5CWHEE2M0/view?usp=sharing"
                                 target="blank">
-                                <img src="../img/portfolio/ind-project/takna/1.jpg" alt="" class="thumparallax">
+                                <img src="../img/portfolio/ind-project/project-paid/aircraft-marshalling.jpg" alt=""
+                                    class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <a href="https://www.youtube.com/watch?v=Yv1wMjKBSNo&t=4s" target="blank">
-                                <img src="../img/portfolio/ind-project/takna/3.jpg" alt="" class="thumparallax">
+                            <a href="https://drive.google.com/file/d/1dBtdkFzhSh4CABugZZBFkVAHrbsk2N72/view?usp=sharing"
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/little-man.jpg" alt=""
+                                    class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/takna/2.jpg" alt="" class="thumparallax">
+                            <a href="https://drive.google.com/file/d/1LFYJ02rikb-5akS62yvbjpBZLbwpFkHo/view?usp=sharing"
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/maam-pam-wed.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <img src="../img/portfolio/ind-project/project-paid/betch-birthday.jpg" alt=""
+                                class="thumparallax">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
         <!-- ==================== End projdtal ==================== -->
 
+        <section class="intro-section section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-4">
+                        <div class="htit">
+                            <h4>Project Videos</h4>
+                        </div>
+                    </div>
+                    <!-- <div class="col-lg-8 offset-lg-1 col-md-8 mb-30">
+                        <div class="text">
+                            <p>We are a Creative Agency & Startup Studio that provides Digital Products and Services
+                                turns to focus on client success. We specialize in user interface design, including
+                                front-end development which we consider to be an integral part.</p>
+                            <p class="mt-10">
+                                We specialize in user interface design, including front-end development which we
+                                consider to be an integral part.
+                            </p>
+                        </div>
+                    </div> -->
+
+                    <!-- <div class="col-lg-3 col-md-6">
+                        <div class="item mt-30">
+                            <h6>Event</h6>
+                            <p><a href="#0">Youth Camp</a></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="item mt-30">
+                            <h6>Date</h6>
+                            <p>May 1 - 3, 2019 </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="item mt-30">
+                            <h6>Categories</h6>
+                            <p><a href="#0">Video</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="item mt-30">
+                            <h6>Tags</h6>
+                            <p><a href="#0">Film</a> , <a href="#0">Photography</a> , <a href="#0">Entertainment</a></p>
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+        </section>
+
+
+        <section class="projdtal">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://www.youtube.com/watch?v=gv5WQ8t-v7U" target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/crazy.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://drive.google.com/file/d/13uHq5Ws8hpoGrAkfIGsX42s-jSRUxaIH/view?usp=sharing"
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/tv-show.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://drive.google.com/file/d/1xS3IH4iufL6qPAlcF0pevn-RuM98tKvT/view?usp=sharing"
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/tropang-tuldik.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://drive.google.com/file/d/1zDGmmZlB4H-MLCMnhAPD5nO3LCbdXMSF/view?usp=sharing"
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/grit-motiv.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://www.facebook.com/nathanmuyx/videos/1086893291380476" target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/kung-siya-man.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://www.facebook.com/nathanmuyx/videos/957695084300298" target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/elfili.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img mb-30">
+                            <a href="https://www.facebook.com/nathanmuyx/videos/962805277122612" target="blank">
+                                <img src="../img/portfolio/ind-project/project-paid/malagim-na-alaala.jpg" alt=""
+                                    class="thumparallax">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!-- ==================== Start next-project ==================== -->
@@ -226,7 +353,7 @@
         <section class="next-project">
             <div class="container">
                 <div class="content text-center">
-                    <a href="davao-light-details.html">
+                    <a href="yabi-details.html">
                         <h2 class="wow" data-splitting>Next</h2>
                     </a>
                 </div>
