--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Aron onepage themeforest" />
-    <meta name="description" content="Aron - Onepage Multi-Purpose HTML5 Template" />
+    <meta name="keywords" content="nathanmuyx | official site" />
+    <meta name="description" content="nathanmuyx | official site" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-lg-6 col-md-8">
                             <div class="right">
-                                <p>© 2020, Aron Template. Made with passion by UI-ThemeZ.</p>
+                                <p>© 2020 Copyright nathanmuyx.</p>
                             </div>
                         </div>
                     </div>
