--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Aron onepage themeforest" />
-    <meta name="description" content="Aron - Onepage Multi-Purpose HTML5 Template" />
+    <meta name="keywords" content="nathanmuyx | official site" />
+    <meta name="description" content="nathanmuyx | official site" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -29,6 +29,20 @@
 
     <!-- Core Style Css -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <style>
+        .btn-cv {
+            box-shadow: 16px 16px 0px #202125 !important;
+            width: 200px;
+            height: 50px;
+            border: none;
+        }
+
+        .fa-download {
+            color: #a6906a !important;
+            margin-left: 5px;
+        }
+    </style>
 
 </head>
 
@@ -184,36 +198,53 @@
                                         <div class="author">
                                             <img src="img/home/profile.jpg" alt="">
                                         </div>
-                                        <h6>I'm a <span>Graphic Designer</span> </h6>
+                                        <!-- <h6><span>Social Media Accounts</span> </h6> -->
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-8 offset-lg-2 quote-text">
+                            <div class="col-lg-12 quote-text">
                                 <div class="col-lg-10 offset-lg-1">
                                     <div class="row">
-                                        <div class="col-lg-3 items valign">
-                                            <div class="item wow fadeIn" data-wow-delay=".3s">
-                                                <span class="fab fa-facebook-f"></span>
-                                            </div>
+                                        <div class="col-lg-3 items text-center">
+                                            <a href="https://www.facebook.com/nathanmuyx/" target="blank">
+                                                <div class="item wow fadeIn " data-wow-delay=".3s">
+                                                    <span class="fab fa-facebook-f fa-2x"></span>
+                                                </div>
+                                            </a>
                                         </div>
-                                        <div class="col-lg-3 items active valign">
-                                            <div class="item wow fadeIn" data-wow-delay=".3s">
-                                                <span class="fab fa-instagram"></span>
-                                            </div>
+                                        <div class="col-lg-3 items text-center">
+                                            <a href="https://www.instagram.com/nathanmuyx/?hl=en/" target="blank">
+                                                <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                    <span class="fab fa-instagram fa-2x"></span>
+                                                </div>
+                                            </a>
                                         </div>
-                                        <div class="col-lg-3 items valign">
-                                            <div class="item wow fadeIn" data-wow-delay=".3s">
-                                                <span class="fab fa-twitter"></span>
-                                            </div>
+                                        <div class="col-lg-3 items text-center">
+                                            <a href="https://twitter.com/nathanmuyxs" target="blank">
+                                                <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                    <span class="fab fa-twitter fa-2x"></span>
+                                                </div>
+                                            </a>
                                         </div>
-                                        <div class="col-lg-3 items valign">
-                                            <div class="item wow fadeIn" data-wow-delay=".3s">
-                                                <span class="fab fa-youtube"></span>
-                                            </div>
+                                        <div class="col-lg-3 items text-center">
+                                            <a href="https://www.youtube.com/channel/UCXk-pFipfJkLqQeCdKLVqVQ?view_as=subscriber"
+                                                target="blank">
+                                                <div class="item wow fadeIn" data-wow-delay=".3s">
+                                                    <span class="fab fa-youtube fa-2x"></span>
+                                                </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+
+                            <div class="col-lg-12 quote-text">
+                                <a href="files/nathanmuyx.pdf">
+                                    <button class="btn btn-default btn-cv">
+                                        CHECK OUT MY CV
+                                        <span class="fa fa-arrow-down fa-download"></span>
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -728,9 +759,9 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 col-lg-3 valign">
+                        <!-- <div class="col-md-4 col-lg-3 valign">
                             <a href="contact.html" class="btn-curve btn-lit"><span>Get In Touch</span></a>
-                        </div>
+                        </div> -->
 
                     </div>
                     <div class="row mt-50">
