--- a/project/takna-details.html
+++ b/project/takna-details.html
@@ -195,22 +195,26 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="img mb-30">
-                            <a href="https://www.facebook.com/WeArePsitsXI/photos/pcb.2229496913818521/2229494867152059"
-                                target="blank">
+
+                            <a href=" https://www.youtube.com/watch?v=Yv1wMjKBSNo&t=4s" target=" blank">
                                 <img src="../img/portfolio/ind-project/takna/1.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <a href="https://www.youtube.com/watch?v=Yv1wMjKBSNo&t=4s" target="blank">
+                            <a href=https://drive.google.com/file/d/1f3Eqja5xnFEudvvLmG3CXpRalbgFRpaq/view?fbclid=IwAR2_G3m-M8jCXv62PR9sDpEvNTPtgaiGcnvCt_uc_K8wXH-lOdQ5d8dLXA8"
+                                target="blank">
                                 <img src="../img/portfolio/ind-project/takna/3.jpg" alt="" class="thumparallax">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img mb-30">
-                            <img src="../img/portfolio/ind-project/takna/2.jpg" alt="" class="thumparallax">
+                            <a href="https://www.facebook.com/WeArePsitsXI/photos/pcb.2229496913818521/2229494867152059"
+                                target="blank">
+                                <img src="../img/portfolio/ind-project/takna/2.jpg" alt="" class="thumparallax">
+                            </a>
                         </div>
                     </div>
                 </div>
