--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                                     <div class="item wow fadeIn" data-wow-delay=".3s">
                                         <span class="icon et-presentation"></span>
                                         <h5>Motion Graphics</h5>
-                                        <p>nteractive contents undergo Adobe Photoshop/Microsoft Powerpoint.</p>
+                                        <p>Interactive contents undergo Adobe Photoshop/Microsoft Powerpoint.</p>
                                     </div>
                                 </div>
                             </div>
