--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                                     <div class="item wow fadeIn" data-wow-delay=".3s">
                                         <span class="icon et-camera"></span>
                                         <h5>Film Making / Editing</h5>
-                                        <p>The product of the intellect are converted into film and processed using
+                                        <p>The products of the intellect are converted into film and processed using
                                             Final Cut Pro X.</p>
                                     </div>
                                 </div>
