--- a/project/davao-light-details.html
+++ b/project/davao-light-details.html
@@ -137,7 +137,7 @@
         <section class="intro-section section-padding">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-4">
+                    <!-- <div class="col-lg-3 col-md-4">
                         <div class="htit">
                             <h4>introduction</h4>
                         </div>
@@ -152,7 +152,7 @@
                                 consider to be an integral part.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-3 col-md-6">
                         <div class="item mt-30">
