--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             width: 200px;
             height: 50px;
             border: none;
+            color: #a6906a !important;
         }
 
         .fa-download {
@@ -417,7 +418,7 @@
                             <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="project/yabi-details.html">i
+                                    <a href="project/yabi-details.html">
                                         <img src="img/portfolio/project/10.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
