fixed next button

--- a/project/project-paid-details.html
+++ b/project/project-paid-details.html
@@ -353,7 +353,7 @@
         <section class="next-project">
             <div class="container">
                 <div class="content text-center">
-                    <a href="yabi-details.html">
+                    <a href="takna-details.html">
                         <h2 class="wow" data-splitting>Next</h2>
                     </a>
                 </div>
