--- a/project/yabi-details.html
+++ b/project/yabi-details.html
@@ -224,7 +224,7 @@
         <section class="next-project">
             <div class="container">
                 <div class="content text-center">
-                    <a href="davao-light-details.html">
+                    <a href="project-paid-details.html">
                         <h2 class="wow" data-splitting>Next</h2>
                     </a>
                 </div>
