--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             </div>
 
                             <div class="col-lg-12 quote-text item wow fadeIn" data-wow-delay=".1s">
-                                <a href="files/nathanmuyx.pdf">
+                                <a href="files/nathanmuyx.pdf" target="blank">
                                     <button class="btn btn-default btn-cv">
                                         CHECK OUT MY CV
                                         <span class="fa fa-arrow-down fa-download"></span>
